--- a/style.css
+++ b/style.css
@@ -20,6 +20,8 @@
     position: relative;
     max-width: 600px;
     width: 100%;
+    box-sizing: border-box;
+    margin: 10px;
   }
   
   img {
